# RiS_team_gamma

./: Poročilo.docx  README.md  extract_plot
11_6_2018/: RingDetect_v3_2.py  RingDetect_v4.py
11_6_2018/ZZ_delo/image_segmentation/: RingDetect_v3_2_color_finder.py  cylinder_segmentation.cpp  koords  to_do.txt
18_5_2018/: kaj_fali
1_6_2018/image_segmentation/: RingDetect_v3_2.py
4_5_2018_tekma2/exercise3/src/: RingDetect_v3_2.py  cylinder_found.py  map_goals_move.cpp
4_5_2018_tekma2/pcl_demos/src/: cylinder_segmentation.cpp
6_6_2018/src/exercise1/: CMakeLists.txt  package.xml
6_6_2018/src/exercise3/: CMakeLists.txt
6_6_2018/src/exercise3/launch/: amcl_demo_kinect.launch  competitionRun.launch  map_v2.pgm  map_v2.yaml  start_robot.launch
6_6_2018/src/exercise3/src/: RingDetect_v3_2.py  competitionRun.cpp  map_goals_dn.cpp  map_goals_move.cpp  rings.txt
8_5_2018_zan_solo/exercise3/launch/: start_robot.launch
HW3/: first_map_new.pgm
HW3/exercise3/: circle_detected.py
HW4/launch_close/: amcl_demo.launch  move_base.launch.xml
HW5/exercise3/: CMakeLists.txt
HW5/exercise3/src/: RingDetect_v3.py
exercise1/: CMakeLists.txt
exercise1/launch/: sum.launch
exercise1/msg/: Greeting.msg
exercise1/src/: client_sum_node.cpp  publish_custom_msg_node.cpp  service_sum_node.cpp  subscribe_custom_msg_node.cpp
exercise1/srv/: Sum.srv
ostalo/: BestRingDetect.py  Koordinati_v2.txt  RingDetect.py  map_goals_move.cpp  navodila_za_usposabljanje_robota.txt
porocilo_zanz/: Poročilo.docx
task1_hw3base/: RingDetect_v2.py  kvarternioni.txt  map_goals_move.cpp
(+68 files in other folders)
